Update HOW-TO-RUN.md